--- a/_posts/2024-08-06-english.md
+++ b/_posts/2024-08-06-english.md
@@ -8,7 +8,10 @@ tags: [English]
 comments: true
 ---
 
-[TOC]
+- [1.Elegant Sentence](#1elegant-sentence)
+- [2.Excellent Writing Skills](#2excellent-writing-skills)
+- [3.Oral Expressions](#3oral-expressions)
+
 
 ##### 1.Elegant Sentence
 
